<resources>
    <string name="app_name">Bóng Đá Mới</string>
    <string name="competition">GIẢI ĐẤU</string>
    <string name="match">TRẬN ĐẤU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_internet">Không có dữ liệu Offline</string>
    <string name="close">Đóng</string>
    <string name="open">Mở</string>
    <string name="menu_home">Tin tức</string>
    <string name="menu_standing">Bảng xếp hạng</string>
    <string name="menu_schedule">Lịch thi đấu</string>
    <string name="menu_club">Câu lạc bộ</string>
    <string name="notification_dialog">Thông Báo</string>
    <string name="swap_online">Tiến hành chuyển sang chế độ Online</string>
    <string name="accept">Xác nhận</string>
    <string name="search">Tìm kiếm</string>
    <string name="no_result">Không tìm thấy kết quả</string>
</resources>