<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_radius"
    android:paddingBottom="20dp"
   >


        <TextView
            android:id="@+id/tv_notification_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_dialog"
            android:textSize="38sp"
            android:textColor="@color/bluegreen"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"

            android:gravity="center"
            android:background="@drawable/bg_white_top_corner_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_swaponline_noti"
            android:paddingTop="40dp"
            android:paddingHorizontal="40dp"
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:text="@string/swap_online"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification_dialog"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept_dialog"
            android:paddingHorizontal="20dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_swaponline_noti"
            android:background="@drawable/bg_white_corner_20"

            android:textColor="@color/bluegreen"/>






</androidx.constraintlayout.widget.ConstraintLayout>